* Beginn mit Code Cleanup - entfernen nicht genutzter Methoden und Klassen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AccessibilityServiceAppV2">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.example.accessibilityinspectorservice.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,7 +22,7 @@
         </activity>
 
         <service
-            android:name=".MyAccessibilityServiceV2"
+            android:name="com.example.accessibilityinspectorservice.AccessibilityInspectorService"
             android:enabled="true"
             android:exported="true"
             android:label="My Access Application"
