--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven{
+            url  "https://dl.bintray.com/takisoft/android"
+        }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.1"
