--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
             android:name="com.example.accessibilityinspectorservice.AccessibilityInspectorService"
             android:enabled="true"
             android:exported="true"
-            android:label="My Access Application"
+            android:label="Inspector A11y"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService" />
